[package]
name = 'ad_hoc_bench'
edition = { workspace = true }
authors = ["Grandine <info@grandine.io>"]

[lints]
workspace = true

[dependencies]
allocator = { workspace = true }
anyhow = { workspace = true }
binary_utils = { workspace = true }
bytesize = { workspace = true }
clap = { workspace = true }
database = { workspace = true }
eth2_cache_utils = { workspace = true }
fork_choice_control = { workspace = true }
fork_choice_store = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
logging = { workspace = true }
pubkey_cache = { workspace = true }
rand = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }
types = { workspace = true }

[target.'cfg(not(target_os = "windows"))'.dependencies]
tikv-jemalloc-ctl = { workspace = true }
