[package]
name = 'allocator'
edition = { workspace = true }
authors = ["Grandine <info@grandine.io>"]

[lints]
workspace = true

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { workspace = true }

[features]
jemalloc_disable_initial_exec_tls = ["jemallocator/disable_initial_exec_tls"]
