[package]
name = 'binary_utils'
edition = { workspace = true }
authors = ["Grandine <info@grandine.io>"]

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
fs-err ={ workspace = true }
logging = { workspace = true }
panics = { workspace = true }
rayon = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = {workspace = true }

[dev-dependencies]
gag = { workspace = true }
serial_test = { workspace = true }