[package]
name = 'binary_utils'
edition = { workspace = true }
authors = ["Grandine <info@grandine.io>"]

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
logging = { workspace = true }
panics = { workspace = true }
rayon = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = {workspace = true }
