[package]
name = 'binary_utils'
edition = { workspace = true }
authors = ["Grandine <info@grandine.io>"]

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
fs-err ={ workspace = true }
logging = { workspace = true }
logroller = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
panics = { workspace = true }
rayon = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = {workspace = true }
types = { workspace = true }

[dev-dependencies]
gag = { workspace = true }
serial_test = { workspace = true }
tempfile = { workspace = true }

[features]
tracing = []