[package]
name = 'bls'
edition = { workspace = true }
authors = ["Grandine <info@grandine.io>"]

[lints]
workspace = true

[features]
blst = ["dep:bls-blst"]
zkcrypto = ["dep:bls-zkcrypto"]

[dependencies]
bls-core = { workspace = true }
bls-blst = { workspace = true, optional = true }
bls-zkcrypto = { workspace = true, optional = true }
