[package]
name = 'bls'
edition = { workspace = true }
authors = ["Grandine <info@grandine.io>"]

[lints]
workspace = true

[features]
blst = ["dep:bls-blst"]
zkcrypto = ["dep:bls-zkcrypto"]
zkvm-pico = ["bls-zkcrypto/zkvm-pico"]

[dependencies]
bls-core = { workspace = true }
bls-blst = { workspace = true, optional = true }
bls-zkcrypto = { workspace = true, optional = true }
