[package]
name = 'builder_api'
edition = { workspace = true }
authors = ["Grandine <info@grandine.io>"]

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
bls = { workspace = true }
clock = { workspace = true }
derive_more = { workspace = true }
helper_functions = { workspace = true }
hex-literal = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
prometheus_metrics = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_utils = { workspace = true }
ssz = { workspace = true }
thiserror = { workspace = true }
typenum = { workspace = true }
types = { workspace = true }

[dev-dependencies]
eth2_cache_utils = { workspace = true }
serde_json = { workspace = true }
test-case = { workspace = true }
