[package]
name = 'builder_api'
edition = { workspace = true }
authors = ["Grandine <info@grandine.io>"]

[lints]
workspace = true

[dependencies]
arc-swap = { workspace = true }
anyhow = { workspace = true }
bls = { workspace = true }
clock = { workspace = true }
derive_more = { workspace = true }
enum-iterator = { workspace = true }
helper_functions = { workspace = true }
hex-literal = { workspace = true }
http_api_utils = { workspace = true }
itertools = { workspace = true }
tracing = { workspace = true }
logging = { workspace = true }
mime = { workspace = true }
prometheus_metrics = { workspace = true }
pubkey_cache = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_utils = { workspace = true }
ssz = { workspace = true }
thiserror = { workspace = true }
typenum = { workspace = true }
types = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
test-case = { workspace = true }
