[package]
name = 'data_dumper'
version = '0.1.0'
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
dedicated_executor = { workspace = true }
features = { workspace = true }
fs-err = { workspace = true }
logging = { workspace = true }
num_cpus = { workspace = true }
ssz = { workspace = true }
tracing = { workspace = true }
types = { workspace = true }

[lints]
workspace = true
