[package]
name = 'database'
edition = { workspace = true }
authors = ["Grandine <info@grandine.io>"]

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
bytesize = { workspace = true }
fs-err = { workspace = true }
futures = { workspace = true }
im = { workspace = true }
itertools = { workspace = true }
libmdbx = { workspace = true }
log = { workspace = true }
snap = { workspace = true }
std_ext = { workspace = true }
tap = { workspace = true }
thiserror = { workspace = true }
unwrap_none = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
test-case = { workspace = true }
