[package]
name = 'database'
edition = { workspace = true }
authors = ["Grandine <info@grandine.io>"]

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
im = { workspace = true }
snap = { workspace = true }
std_ext = { workspace = true }
tap = { workspace = true }
unwrap_none = { workspace = true }

[target.'cfg(not(target_os = "zkvm"))'.dependencies]
bytesize = { workspace = true }
fs-err = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
libmdbx = { workspace = true }
logging = { workspace = true }
thiserror = { workspace = true }
tracing ={ workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
test-case = { workspace = true }
