[package]
name = 'debug_info'
version = '0.1.0'
edition.workspace = true

[lints]
workspace = true

[dependencies]
features = { workspace = true }
futures = { workspace = true }
logging ={ workspace = true }
prometheus_metrics = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
