[package]
name = 'doppelganger_protection'
version = '0.1.0'
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
arc-swap = { workspace = true }
bls = { workspace = true }
futures = { workspace = true }
helper_functions = { workspace = true }
liveness_tracker = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
typenum = { workspace = true }
types = { workspace = true }

[dev-dependencies]
factory = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
