[package]
name = 'eip_7594'
edition = { workspace = true }
authors = ["Grandine <info@grandine.io>"]

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
c-kzg = { workspace = true }
hashing = { workspace = true }
helper_functions = { workspace = true }
primitive-types = { workspace = true }
ssz = { workspace = true}
sha3 = { workspace = true }
typenum = { workspace = true }
types = { workspace = true }

[dev-dependencies]
duplicate = { workspace = true }
serde = { workspace = true }
spec_test_utils = { workspace = true }
test-generator = { workspace = true }
