[package]
name = 'eip_7594'
edition = { workspace = true }
authors = ["Grandine <info@grandine.io>"]

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
c-kzg = { workspace = true }
hashing = { workspace = true }
helper_functions = { workspace = true }
itertools = { workspace = true }
kzg = { workspace = true }
num-traits = { workspace = true }
ssz = { workspace = true}
sha2 = { workspace = true }
thiserror = { workspace = true }
try_from_iterator = { workspace = true }
typenum = { workspace = true }
types = { workspace = true }
prometheus_metrics = { workspace = true }

[dev-dependencies]
duplicate = { workspace = true }
serde = { workspace = true }
spec_test_utils = { workspace = true }
test-generator = { workspace = true }
